--- a/main.css
+++ b/main.css
@@ -8,4 +8,12 @@ canvas {
   background: #000000;
   display: block;
   margin: 0 auto;
+
+  /* this scales the canvas to be as wide as the window. 
+  We don't want to specify canvas height, 
+  as just doing width will maintain the aspect ratio on it's own*/
+  width: 100vw;
+
+  /* nearest neighbor scaling prevents blurryness, but now we've got big pixels*/
+  image-rendering: pixelated;
 }
