--- a/main.css
+++ b/main.css
@@ -4,11 +4,13 @@
   margin: 0;
 }
 
-body{
-  overflow: hidden; /* Hide scrollbars */
+body {
+  overflow: hidden;
+  /* Hide scrollbars */
 }
 
 #canvasDiv {
+  /*make div as large as possible*/
   width: 100vw;
   height: 100vh;
 }
@@ -16,16 +18,11 @@ body{
 #myCanvas {
   background: #000000;
 
-
-
-
-  /* this scales the canvas to be as wide as the window. 
-  We don't want to specify canvas height, 
-  as just doing width will maintain the aspect ratio on it's own*/
+  /* this scales the canvas to be as large as the div it's inside, 
+  but without going over the edges*/
   width: 100%;
-  height:100%;
+  height: 100%;
   object-fit: contain;
-
 
   /* nearest neighbor scaling prevents blurryness, but now we've got big pixels*/
   image-rendering: pixelated;
