--- a/main.css
+++ b/main.css
@@ -24,6 +24,31 @@ body {
   height: 100%;
   object-fit: contain;
 
+  position:absolute;
+  left:0px;
+  top:0px;
+
+  z-index: 0;
+
   /* nearest neighbor scaling prevents blurryness, but now we've got big pixels*/
   image-rendering: pixelated;
+}
+
+#textCanvas {
+  background: #ffffff00;
+
+  /* this scales the canvas to be as large as the div it's inside, 
+  but without going over the edges*/
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+
+  position:absolute;
+  left:0px;
+  top:0px;
+
+  z-index: 1;
+
+  /* nearest neighbor scaling prevents blurryness, but now we've got big pixels*/
+  image-rendering: crisp-edges;
 }
