--- a/main.css
+++ b/main.css
@@ -5,8 +5,8 @@ body {
 
 #canvasDiv {
   /*make div as large as possible*/
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 }
 
 #myCanvas {
